--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
     "@phosphor-icons/react": "^2.0.15",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.18",
     "next": "14.1.4",
     "react": "^18",
