--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.0.18",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.5"
