--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.3",
     "swr": "^2.2.5"
   },
   "devDependencies": {
